# Iot-demo

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-bcf16f7b329a130878971d7eb363effff8fad7068ea88e728bdcab6e00431946.json
iot-dashboard/: package-lock.json  package.json
iot-dashboard/src/: App.vue
iot-device/: Cargo.toml
iot-device/Notes/: note1.md
iot-device/src/: main.rs
iot-server/: .env  Cargo.toml
iot-server/.sqlx/: query-adb4bb2c242b0711fa92492a86f5ca00558230c7c103dae3d7b442e54efac4db.json  query-b4245ae9d7cff30265da75f76c8cbf27a8f59afdde09c20b87278b7d71635ded.json
iot-server/src/: main.rs
iot-server/src/app/: db.rs  handlers.rs  mod.rs  models.rs  mqtt.rs
src/: main.rs
